# nook

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  config.txt  main.cpp
.github/workflows/: ci.yml
Games/: InfiniteRunner.h  Platformer.h  Pong.h
include/NOOK/GUI/: Screens.h
include/NOOK/Systems/Debug/: DebugSystem.h
include/NOOK/Systems/GameLogic/: GameLogicSystem.h  GameOverSystem.h  PauseSystem.h
include/NOOK/Systems/Movement/: JumpSystem.h  MovementSystem.h
include/NOOK/Systems/Physics/: PhysicsSystem.h
include/NOOK/Systems/Render/: RenderShapeSystem.h  RenderSpriteSystem.h  RenderTextSystem.h
include/NOOK/Utils/: Config.h  Register.h  utils.h
include/NOOK/components/: CircleShape.h  Debug.h  FloatVariableDebug.h  GameOver.h  Jump.h  Logic.h  Pause.h  PhysicsCircle.h  PlayerMove.h  RectangleShape.h  RigidBody.h  Sprite.h  Text.h  Transform.h
include/NOOK/core/: ComponentArray.h  ComponentManager.h  Coordinator.h  EntityManager.h  ResourceManager.h  System.h  Types.h
src/: ComponentManager.cpp  ComponentManager.h  Config.h  Entity.h  EntityManager.h  EntityMap.cpp  EntityMap.h  GameLoopManager.cpp  GameLoopManager.h  InputManager.cpp  InputManager.h  Nook.cpp  Nook.h  NookManager.cpp  NookManager.h  Register.h  Types.h  config.txt  gui.cpp  gui.h  main.cpp  utilities.cpp  utilities.h  utils.h
src/Components/: Transform.h
src/GUI/: FloatVariableDebugGUI.h  GameOverScreen.h  IntVariableDebugGUI.h  PauseScreen.h  Screens.cpp
src/Games/: InfiniteRunner.h  Pong.h
src/Input/: Input.cpp  Input.h
src/Systems/: MovementSystem.cpp  MovementSystem.h  PhysicsSystem.cpp  PhysicsSystem.h
src/Systems/Debug/: DebugSystem.cpp  DebugSystem.h
src/Systems/GameLogic/: GameLogicSystem.cpp  GameLogicSystem.h  GameOverSystem.cpp  GameOverSystem.h  PauseSystem.cpp
src/Systems/Movement/: JumpSystem.cpp  MovementSystem.cpp  MovementSystem.h
src/Systems/Physics/: BouncePhysicsSystem.cpp  BouncePhysicsSystem.h  PhysicsSystem.cpp  PhysicsSystem.h
src/Systems/Render/: RenderShapeSystem.cpp  RenderShapeSystem.h  RenderSpriteSystem.cpp  RenderSpriteSystem.h  RenderSystem.cpp  RenderSystem.h  RenderTextSystem.cpp  RenderTextSystem.h
src/Utils/: Register.h  utils.cpp  utils.h
src/components/: BoolVariableDebug.h  CircleShape.h  FloatVariableDebug.h  GameOver.h  Gravity.h  IntVariableDebug.h  Jump.h  LineShape.h  Logic.h  Pause.h  PhysicsCircle.h  PhysicsPolygon.h  PlayerMove.h  RectangleShape.h  Render.h  Renderable.h  RigidBody.h  Shape.h  Sprite.h  Text.h  Transform.h  b2CircleComponent.h  b2PolygonComponent.h
src/core/: ComponentArray.h  ComponentManager.h  Coordinator.h  EntityManager.h  ResourceManager.cpp  ResourceManager.h  System.h  SystemManager.h  Types.h
src/previous-approach/: Data.cpp  Data.h  GameLoopManager.cpp  GameLoopManager.h  InputManager.cpp  InputManager.h  Nook.cpp  Nook.h
src/utils/: utils.cpp  utils.h
